# pwm

./: Cargo.toml  Makefile  README.md  pwm.desktop
etc/xdg/pwm/: startup.sh
extras/conky/: README.md
src/: bar.rs  main.rs
