[package]
name = "pwm"
version = "0.1.0"
description = "Pipa Window Manager, a light Penrose Libraries WM."
authors = ["Daniel Azevedo", "dani-77 <daniazevedo77@posteo.net>"]
license = "MIT"
edition = "2024"

[dependencies]
penrose = "0.4.0"
penrose_ui = "0.4.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
